# ffi-util

./: CMakeLists.txt
lua/: ffi_util.lua  ffi_util_Array.lua  ffi_util_func.lua
lua/ffi_util/: Array.lua  array.lua  oop.lua  util.lua
lua/ffi_util/array/: Array.lua  ArrayDouble.lua  ArrayInt32.lua
