cmake_minimum_required(VERSION 3.20)

project(ffi-util VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

if(FFI_UTIL_INSTALL_DIR)
  set(CMAKE_INSTALL_PREFIX ${FFI_UTIL_INSTALL_DIR}/${PROJECT_NAME}/)
else()
  set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-${PROJECT_VERSION}/)
endif()

# file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/null.cpp "")

# add_library(null SHARED ${CMAKE_CURRENT_BINARY_DIR}/null.cpp)

install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/lua/
  DESTINATION lua
  FILES_MATCHING PATTERN "*.lua"
  )
